--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,6 +25,7 @@
 }
 
 p, h1, h2, h3, h4, h5, h6, a {
+    font-size: 1em;
     margin: 0;
     padding: 0;
     font-family: 'Philosopher', sans-serif;
