--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -1,9 +1,8 @@
 // Place all the styles related to the page controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.admin-header{
+.admin-link{
   padding: 1%;
-  border: solid 1px #9e9e9e;
 }
 .small-text{
   font-size: 0.8em;
