--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -20,10 +20,10 @@
     <th style="width:5%">ID:</th>
     <th style="width:20%">Title:</th>
     <th style="width:15%">Category:</th>
-    <th style='width:15%'>Created: <i class="icon-time muted"></i></th>
-    <th style="width:13%">Comments: <i class="icon-comment muted"></i></th>
-    <th style="width:20%">Visits: <i class="icon-eye-open muted"></i></th>
-    <th>Actions: <i class=" icon-wrench muted"></i></th>
+    <th style='width:15%'>Created:</th>
+    <th style="width:13%">Comments:</th>
+    <th style="width:20%">Visits:</th>
+    <th style="width:20%">Actions:</th>
   </tr>
   </thead>
   <% @posts.each do |post| %>
