--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
               <li><%= link_to 'Another news', news_index_path %></li>
               <li><%= link_to 'Article', articles_path  %></li>
             <% end %>
+            <li><%= link_to 'Manchester United', club_path(1) %></li>
             <li><%= link_to 'Add your Article', new_article_path if !admin_signed_in? %></li>
             <li><%= link_to "#{current_user.name || current_user.email}", current_user unless admin_signed_in? %></li>
             <li><%= link_to("Logout", destroy_user_session_path, :method => :delete) %></li>
