--- a/app/views/players/_list.html.erb
+++ b/app/views/players/_list.html.erb
@@ -1,5 +1,4 @@
 <% if @club.players.present? %>
-    <h4 class="left">Players:</h4><br/>
     <table class="table table-hover">
       <thead>
       <tr>
@@ -31,4 +30,4 @@
 <% else %>
     <h4 class="center">Players not found...</h4>
 <% end %>
-<%= link_to 'New player', new_club_player_path(@club) %>
+<%= link_to 'New player', new_club_player_path(@club) if admin_signed_in?%>
