--- a/app/assets/stylesheets/page.css.scss
+++ b/app/assets/stylesheets/page.css.scss
@@ -47,3 +47,28 @@
   padding: 2%;
   border: solid 1px rgba(175, 175, 175, 0.35);
 }
+
+.logo-club-game{
+  float: right;
+  padding-right: 5%;
+}
+
+.info-game{
+  width: 100%;
+  height: 100%;
+}
+
+.clubname-club-game{
+  font-size: 1.2em;
+  padding-left: 5%;
+  padding-top: 5%;
+  width: 60%;
+  height: 10%;
+}
+
+.info-game{
+  padding-top: 2%;
+  padding-left: 5%;
+  width: 100%;
+  height: 30%;
+}
