--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
         <ul class="nav pull-right">
           <% if user_signed_in? || admin_signed_in? %>
             <% if admin_signed_in? %>
+              <li><%= link_to 'Votings', votings_path %></li>
               <li><%= link_to 'Posts', posts_path %></li>
               <li><%= link_to 'Clubs', clubs_path %></li>
               <li><%= link_to 'Users', users_path %></li>
