--- a/app/views/votings/new.html.erb
+++ b/app/views/votings/new.html.erb
@@ -10,7 +10,7 @@
         </div>
     <% end %>
     <p>
-      <%= f.label :title %><br />
+      <%= f.label :title %>
       <%= f.text_field :title %>
     </p>
     <%= f.fields_for :questions do |builder| %>
