--- a/app/views/votings/_answers.html.erb
+++ b/app/views/votings/_answers.html.erb
@@ -1,6 +1,6 @@
-<p>
+<p class="fields">
   <%= f.label :content, "Answer" %>
   <%= f.text_field :content %>
-  <%= f.check_box :_destroy %>
-  <%= f.label :_destroy, "Remove" %>
+  <%= f.hidden_field :_destroy %>
+  <%= link_to_remove_fields 'remove', f %>
 </p>
