--- a/app/views/votings/_questions.html.erb
+++ b/app/views/votings/_questions.html.erb
@@ -1,9 +1,8 @@
 <p>
-  <%= f.label :content, "Question" %><br />
-  <%= f.text_field :content %><br />
-  <%= f.check_box :_destroy %>
-  <%= f.label :_destroy, "Remove Question" %>
+  <%= f.label :content, "Question" %>
+  <%= f.text_field :content %>
 </p>
 <%= f.fields_for :answers do |builder| %>
     <%= render 'votings/answers', :f => builder %>
 <% end %>
+<p><%= link_to_add_fields "Add Answer", f, :answers %></p>
