edit voting page

--- a/app/views/votings/edit.html.erb
+++ b/app/views/votings/edit.html.erb
@@ -1,4 +1,4 @@
-<h4>Create new voting:</h4>
+<h4>Edit voting:</h4>
 <%= form_for @voting do |f| %>
     <% if @voting.errors.present? %>
         <div class="alert alert-error fade in">
