--- a/app/views/votings/index.html.erb
+++ b/app/views/votings/index.html.erb
@@ -19,8 +19,7 @@
                 </ul>
             </td>
 
-            <td><%= link_to "Show", v %>
-                <%= link_to "Edit", edit_voting_path(v) %>
+            <td><%= link_to "Edit", edit_voting_path(v) %>
                 <%= link_to "Destroy", v, :confirm => 'Are you sure?', :method => :delete %></td>
           </tr>
       <% end %>
