--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,6 +53,7 @@
       </div>
       <div class="span3" style="background-color: #eaeaea; border-radius: 5px; margin-top: -17px;">
         <%= render 'articles/approved_list' %>
+        <%= render 'votings/current_voting' %>
       </div>
     </div>
   </div>
