--- a/app/views/votings/_current_voting.html.erb
+++ b/app/views/votings/_current_voting.html.erb
@@ -1,22 +1,24 @@
 <div class="mini-header-left-panel">
   <p>Voting:</p>
 </div>
-
-<div class="index-voting">
-   <h5><%= Voting.last.title %></h5>
-    <%= form_tag add_vote_votings_path do %>
-        <% Voting.last.questions.first.answers.each do |answer| %>
-            <%= radio_button_tag "answer[id]", answer.id, Voting.last.questions.first.answers.include?(answer) %>
-            <%= answer.content %><br/>
-        <% end %>
-      <%= submit_tag "Vote" %>
-    <% end %>
-</div>
-
-<% if user_signed_in? %>
-    <h5><%= Voting.last.title %></h5>
-    <% Voting.last.questions.first.answers.each do |answer| %>
-        <li><%= answer.content %> (<%= answer.targets.size %>)</li><br/>
-    <% end %>
-    <p class="muted">You are voting!</p>
+<% if Voting.find_last_by_current(true).present? %>
+     <% if current_user_has_vote? %>
+        <div class="index-voting">
+           <h5><%= Voting.find_last_by_current(true).title %></h5>
+            <%= form_tag add_vote_votings_path do %>
+                <% Voting.find_last_by_current(true).questions.first.answers.each do |answer| %>
+                    <%= radio_button_tag "answer[id]", answer.id, Voting.last.questions.first.answers.include?(answer) %>
+                    <%= answer.content %><br/>
+                <% end %>
+              <%= submit_tag "Vote" %>
+            <% end %>
+        </div>
+     <% else %>
+        <h5><%= Voting.find_last_by_current(true).title %></h5>
+            <% Voting.find_last_by_current(true).questions.first.answers.each do |answer| %>
+                <%= answer.content %> (<%= answer.targets.size %>)<br/>
+            <% end %>
+            <h6>You are voting...</h6>
+     <% end %>
 <% end %>
+
