--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Blog</title>
+  <title>Manchester United</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application", :madia => "all" %>
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="navbar" style="margin-top: 5px;">
       <div class="navbar-inner">
-        <a class="brand" href="/">Blog</a>
+        <a class="brand" href="/">Manchester United</a>
         <ul class="nav pull-right">
           <% if user_signed_in? || admin_signed_in? %>
             <% if admin_signed_in? %>
